assets/_general.scss
@font-face {
    font-family: 'OpenDyslexic';
    src: url('opendyslexic/OpenDyslexic-Regular.woff2') format('woff2');
}

@font-face {
    font-family: 'OpenDyslexic';
    src: url('opendyslexic/OpenDyslexic-Bold.woff2') format('woff2');
    font-weight: bold;
}


@font-face {
    font-family: 'OpenDyslexic';
    src: url('opendyslexic/OpenDyslexic-Italic.woff2') format('woff2');
    font-style: italic;
}

.dyslexic *:not([class*="fa-"]):not(.katex):not(.katex *) {
    font-family: 'OpenDyslexic', sans-serif !important;
    font-size-adjust: .45;
    letter-spacing: -0.03em;
    word-spacing: -0.1em;
}

.dyslexic h1 {
    font-family: 'OpenDyslexic', sans-serif !important;
}

.dyslexic h2 {
    font-family: 'OpenDyslexic', sans-serif !important;
}

.dyslexic h3 {
    font-family: 'OpenDyslexic', sans-serif !important;
}

.dyslexic h4 {
    font-family: 'OpenDyslexic', sans-serif !important;
}

.dyslexic h5 {
    font-family: 'OpenDyslexic', sans-serif !important;
}

strong {
    font-family: "DM Sans";
    text-align: center;
}

h1, h2, h3, h4, h5 {
    font-family: "DM Sans";
    font-weight: 900;
}

.markdown h1, h2, h3, h4, h5 {
    font-family: "DM Sans";
    font-weight: 900;
}

h1 {
    font-size: 40px;
}

p, li, tr, a, label, summary, blockquote, button, input {
    font-family: "DM Sans";
    font-weight: 400;
}

summary {
    line-height: 1.2;
}

code {
    font-family: "JetBrains Mono";
    font-weight: 400;
}

kbd {
    font-family: "JetBrains Mono";
    font-weight: 800;
    background-color: #3c3c3c;
    border: solid gray 1px;
    border-radius: 4px;
    padding: 0 4px 0 4px;
    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
}

.SiteLogo {
    border-radius: 8px;
}

.font-bold {
    font-weight: 700;
}

.font-italic {
    font-style: italic;
}

.underlined-text {
    text-decoration: underline;
}

/*
 * TEMPORARY COLOUR CLASSES
 */

.red {
    color: rgb(223, 59, 59) !important;
}

.yellow {
    color: rgb(251, 191, 64) !important;
}

.green {
    color: rgb(96, 234, 147) !important;
}

.blue {
    color: rgb(56, 143, 237) !important;
}

.purple {
    color: rgb(155, 66, 236) !important;
}

.orange {
    color: rgb(244, 112, 43) !important;
}

.emerald {
    color: rgb(101, 250, 204) !important;
}

.cyan {
    color: rgb(82, 215, 247) !important;
}

.teal {
    color: rgb(105, 242, 230) !important;
}

.fuchsia {
    color: rgb(203, 64, 221) !important;
}

